# git-story-animator

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: agents  git-timeline-storyteller.md
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-git-story-animator/: plan.md  spec.md  tasks.md
specs/001-git-story-animator/checklists/: requirements.md
src/git_story_animator/: __init__.py  animator.py  cli.py  git_reader.py  interactive.py  models.py  renderer.py
tests/: conftest.py
tests/contract/: test_cli_contract.py
tests/integration/: test_e2e.py
tests/unit/: test_animator.py  test_cli.py  test_git_reader.py  test_interactive.py  test_models.py  test_renderer.py
